--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "main": "dist/automate.js",
     "scripts": {
         "build": "tsc",
-        "start": "node --env-file=.env -r ts-node/register src/Player.ts",
-        "dev": "node --env-file=.env -r ts-node/register src/Player.ts --debug",
-        "scrape": "node --env-file=.env -r ts-node/register src/Scraper.ts",
-        "play": "node --env-file=.env -r ts-node/register src/Player.ts",
-        "install-deps": "npm install"
+        "start": "node --env-file=.env -r ts-node/register src/automator/Player.ts",
+        "dev": "node --env-file=.env -r ts-node/register src/automator/Player.ts --debug",
+        "scrape": "node --env-file=.env -r ts-node/register src/automator/Scraper.ts",
+        "play": "node --env-file=.env -r ts-node/register src/automator/Player.ts",
+        "lint": "biome check src",
+        "lint:fix": "biome check --write --unsafe src",
+        "format": "biome format --write src"
     },
     "dependencies": {
+        "glob": "^10.3.10",
         "puppeteer": "^24.33.0",
         "puppeteer-extra": "^3.3.6",
         "puppeteer-extra-plugin-stealth": "^2.11.2"
@@ -25,6 +28,8 @@
     "license": "MIT",
     "type": "commonjs",
     "devDependencies": {
+        "@biomejs/biome": "2.3.10",
+        "@types/glob": "^8.1.0",
         "@types/node": "^25.0.2",
         "@types/puppeteer": "^5.4.7",
         "ts-node": "^10.9.2",
