feature: refactor code base

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
     "name": "adrian-transcript-automation",
     "version": "1.0.0",
     "description": "Modular TypeScript automation for extracting and processing Adrian Cantrill course transcripts using Puppeteer and a service-oriented architecture",
-    "main": "dist/automate.js",
+    "main": "dist/play.js",
     "scripts": {
         "build": "tsc",
-        "start": "node --env-file=.env -r ts-node/register src/automator/Player.ts",
-        "dev": "node --env-file=.env -r ts-node/register src/automator/Player.ts --debug",
-        "scrape": "node --env-file=.env -r ts-node/register src/automator/Scraper.ts",
-        "play": "node --env-file=.env -r ts-node/register src/automator/Player.ts",
+        "start": "npm run play",
+        "dev": "node --env-file=.env -r ts-node/register src/play.ts --debug",
+        "scrape": "node --env-file=.env -r ts-node/register src/scrape.ts",
+        "play": "node --env-file=.env -r ts-node/register src/play.ts",
+        "convert": "node --env-file=.env -r ts-node/register src/convert.ts",
         "lint": "biome check src",
         "lint:fix": "biome check --write --unsafe src",
         "format": "biome format --write src"
