chore: refactor services

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ PASSWORD=your_password
 
 # Course ID (can be found in the course URL)
 COURSE_ID=1820301
+
+# Processing Configuration
+BATCH_SIZE=10
+CONCURRENCY=4
+SEEK=false
